--- a/html/index.html
+++ b/html/index.html
@@ -25,7 +25,7 @@
     <header>
       <nav>
         <a href="#">
-          <img class="logo" src="./assets/img/logo.png" alt="logo" />
+          <img class="logo" src="../assets/img/logo.png" alt="logo" />
         </a>
         <ul class="charm-regular">
           <li>
@@ -76,19 +76,19 @@
           <div class="carousel-inner">
             <div class="carousel-item active" data-bs-interval="4000">
               <img
-                src="./assets/img/portada.webp"
+                src="../assets/img/portada.webp"
                 class="d-block w-100"
                 alt="..."
               />
               <div class="carousel-caption d-none d-md-block">
                 <h5>Bienvenidos a Cars</h5>
-                <img class="logo" src="./assets/img/logo.png" alt="logo" />
+                <img class="logo" src="../assets/img/logo.png" alt="logo" />
                 <p>Donde cumplimos tu sueño de ser dueño.</p>
               </div>
             </div>
             <div class="carousel-item" data-bs-interval="4000">
               <img
-                src="./assets/img/concesionario.jpg"
+                src="../assets/img/concesionario.jpg"
                 class="d-block w-100"
                 alt="..."
               />
@@ -99,7 +99,7 @@
             </div>
             <div class="carousel-item" data-bs-interval="4000">
               <img
-                src="./assets/img/vendedores.jpeg"
+                src="../assets/img/vendedores.jpeg"
                 class="d-block w-100"
                 alt="..."
               />
