--- a/html/vendedores.html
+++ b/html/vendedores.html
@@ -25,7 +25,7 @@
     <header>
       <nav>
         <a href="#">
-          <img class="logo" src="./assets/img/logo.png" alt="logo" />
+          <img class="logo" src="../assets/img/logo.png" alt="logo" />
         </a>
         <ul class="charm-regular">
           <li>
